ingress-sravan/ingress-resource-3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-resource-3
spec:
  ingressClassName: nginx
  rules:
  - host: nginx123.devopsfriends.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-main
            port:
              number: 80
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-blue
            port:
              number: 80
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-green
            port:
              number: 80
      - path: /sravaninfo
        pathType: Prefix
        backend:
          service:
            name: sravaninfo
            port:
              number: 5000
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80


      - path: /about
        pathType: Prefix
        backend:
          service:
            name: sravaninfo
            port:
              number: 5000
      - path: /sravan
        pathType: Prefix
        backend:
          service:
            name: sravaninfo
            port:
              number: 5000
